fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: justify;
+    text-align: left;
     min-height: 100vh;
     padding-top: 0;
     margin-left: 1em;
